--- a/docs/source/notebooks/tutorial_residuals.ipynb
+++ b/docs/source/notebooks/tutorial_residuals.ipynb
@@ -115,134 +115,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d09d5573",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[install] Installing external packages at '/tmp/LAT_packages'\n",
-      "\n",
-      "================================================================================\n",
-      "likelihood:mflike.MFLike\n",
-      "================================================================================\n",
-      "\n",
-      "[install] Checking if dependencies have already been installed...\n",
-      "[install] External dependencies for this component already installed.\n",
-      "[install] Doing nothing.\n",
-      "\n",
-      "================================================================================\n",
-      "* Summary * \n",
-      "================================================================================\n",
-      "\n",
-      "[install] All requested components' dependencies correctly installed at /tmp/LAT_packages\n",
-      "[camb] `camb` module loaded successfully from /home/serenagiardiello/anaconda3/envs/mflike/lib/python3.10/site-packages/camb\n",
-      "[mflike.mflike] Number of bins used: 3087\n",
-      "[mflike.mflike] Initialized!\n"
-     ]
-    }
-   ],
-   "source": [
-    "mflike_input_file = dict(\n",
-    "    input_file=\"LAT_simu_sacc_00044.fits\", cov_Bbl_file=\"data_sacc_w_covar_and_Bbl.fits\",\n",
-    "    python_path= \"/home/serenagiardiello/Desktop/SO/band_int/codes/LAT_MFLike_sgiardie\" \n",
-    ")\n",
-    "mflike_config = {\"mflike.MFLike\": mflike_input_file}\n",
-    "\n",
-    "import os\n",
-    "import tempfile\n",
-    "\n",
-    "from cobaya.install import install\n",
-    "\n",
-    "packages_path = os.path.join(tempfile.gettempdir(), \"LAT_packages\")\n",
-    "install({\"likelihood\": mflike_config}, path=packages_path, no_set_global=True, skip_global=True)\n",
-    "\n",
-    "cosmo_params = {\n",
-    "    \"cosmomc_theta\": 0.0104092,\n",
-    "    \"As\": 1e-10 * np.exp(3.044),\n",
-    "    \"ombh2\": 0.02237,\n",
-    "    \"omch2\": 0.1200,\n",
-    "    \"ns\": 0.9649,\n",
-    "    \"Alens\": 1.0,\n",
-    "    \"tau\": 0.0544,\n",
-    "}\n",
-    "\n",
-    "fg_params = {\n",
-    "    \"a_tSZ\": 3.30,\n",
-    "    \"a_kSZ\": 1.60,\n",
-    "    \"a_p\": 6.90,\n",
-    "    \"beta_p\": 2.20,\n",
-    "    \"a_c\": 4.90,\n",
-    "    \"beta_c\": 2.20,\n",
-    "    \"a_s\": 3.10,\n",
-    "    \"T_d\": 9.60,\n",
-    "    \"a_gtt\": 2.80,\n",
-    "    \"a_gte\": 0.10,\n",
-    "    \"a_gee\": 0.10,\n",
-    "    \"a_psee\": 0.003,\n",
-    "    \"a_pste\": 0.042,\n",
-    "    \"xi\": 0.10,\n",
-    "    \"beta_s\": -2.5,  # beta radio\n",
-    "    \"alpha_s\": 1,  # alpha radio\n",
-    "    \"T_effd\": 19.6,  # effective galactic dust temperature\n",
-    "    \"beta_d\": 1.5,  # beta galactic dust\n",
-    "    \"alpha_dT\": -0.6,  # galactic dust ell slope for T\n",
-    "    \"alpha_dE\": -0.4,  # galactic dust ell slope for E\n",
-    "    \"alpha_p\": 1,  # CIB poisson ell slope\n",
-    "}\n",
-    "\n",
-    "nuisance_params = {\n",
-    "    # only ideal values for now\n",
-    "    \"bandint_shift_LAT_93\": 0,\n",
-    "    \"bandint_shift_LAT_145\": 0,\n",
-    "    \"bandint_shift_LAT_225\": 0,\n",
-    "    \"calT_LAT_93\": 1,\n",
-    "    \"calE_LAT_93\": 1,\n",
-    "    \"calT_LAT_145\": 1,\n",
-    "    \"calE_LAT_145\": 1,\n",
-    "    \"calT_LAT_225\": 1,\n",
-    "    \"calE_LAT_225\": 1,\n",
-    "    \"cal_LAT_93\": 1,\n",
-    "    \"cal_LAT_145\": 1,\n",
-    "    \"cal_LAT_225\": 1,\n",
-    "    \"calG_all\": 1,\n",
-    "    \"alpha_LAT_93\": 0,\n",
-    "    \"alpha_LAT_145\": 0,\n",
-    "    \"alpha_LAT_225\": 0,\n",
-    "}\n",
-    "\n",
-    "minimal_settings = dict(lens_potential_accuracy=1)\n",
-    "\n",
-    "high_accuracy_settings = dict(\n",
-    "    lens_potential_accuracy=8,\n",
-    "    lens_margin=2050,\n",
-    "    AccuracyBoost=2.0,\n",
-    "    lSampleBoost=2.0,\n",
-    "    lAccuracyBoost=2.0,\n",
-    "    kmax=10,\n",
-    "    k_per_logint=130,\n",
-    "    nonlinear=True,\n",
-    "    DoLateRadTruncation=False,\n",
-    ")\n",
-    "\n",
-    "info = {\n",
-    "    \"params\": cosmo_params | fg_params | nuisance_params,\n",
-    "    \"likelihood\": mflike_config,\n",
-    "    \"theory\": {\"camb\": {\"extra_args\": minimal_settings}},\n",
-    "    \"packages_path\": packages_path,\n",
-    "}\n",
-    "\n",
-    "from cobaya.model import get_model\n",
-    "\n",
-    "model = get_model(info)\n",
-    "\n",
-    "mflike = model.likelihood[\"mflike.MFLike\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "68ad7e98-d99d-4893-b9ec-bfc05f09b63a",
    "metadata": {
@@ -601,9 +473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mflike",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mflike"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -615,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
