--- a/docs/source/notebooks/tutorial_loading.ipynb
+++ b/docs/source/notebooks/tutorial_loading.ipynb
@@ -43,10 +43,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Numpy : 1.26.4\n",
-      "Matplotlib : 3.8.2\n",
+      "     Numpy : 1.21.5\n",
+      "Matplotlib : 3.4.2\n",
       "      CAMB : 1.5.4\n",
-      "    Cobaya : 3.4.1\n"
+      "    Cobaya : 3.3.1\n"
      ]
     }
    ],
@@ -402,9 +402,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mflike",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "mflike"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
